force-app/main/default/objects/Policy_Period__c/Policy_Period__c.object-meta.xml
<CustomObject>
    <description>Policy Periods for the PEO onboarding Checklist&apos;s EPLI Form</description>
    <label>Policy Period</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>