force-app/main/default/objects/Policy_Period__c/fields/Deductible_Retention__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Retention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deductible / Retention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>