force-app/main/default/objects/Policy_Period__c/fields/PEO_Onboarding_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Onboarding_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEO Onboarding Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>Policy Periods</relationshipLabel>
    <relationshipName>Policy_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>