force-app/main/default/objects/Policy_Period__c/fields/Policy_Period__c.field-meta.xml
<CustomField>
    <fullName>Policy_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Period</label>
    <type>TextArea</type>
</CustomField>