force-app/main/default/objects/Policy_Period__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>